--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "devops_projects",
   "version": "1.0.0",
-  "description": "",
+  "description": "Simple NodeJS CRUD Application",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +13,7 @@
     "express": "4.17.1",
     "mongoose": "5.12.12"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "2.0.7"
+  }
 }
